--- a/src/components/templates/global.scss
+++ b/src/components/templates/global.scss
@@ -9,9 +9,25 @@ $grayText: #929292;
 
 // pages
 .page{
-    @extend .breakable-row;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
+}
+.header{
+    padding: 10px 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.header h1{
+    margin-bottom: 0px !important;
+    color: forestgreen !important;
+}
+.body{
+    flex: 1 1 0px;
+    min-width: 0px;
     background-image: url('../../assets/bg1.jpg');
     background-position: center;
     background-size: cover;
@@ -77,4 +93,13 @@ $grayText: #929292;
 }
 .cursor-pointer{
     cursor: pointer;
+}
+.small-padding{
+    padding: 10px;
+}
+.space-horizontal > :not(:first-child){
+    margin-left: 10px;
+}
+.space-vertical > :not(:first-child){
+    margin-top: 10px;
 }
